# orin-ai-crm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  ECOMMERCE_DATABASE_FLOW.md  MESSAGE_BATCHING_IMPLEMENTATION.md  MODULAR_PRODUCTS_CHANGES.md  Makefile  PHONE_MATCHING_DEMO.md  TODO.txt  brief_produk_baru.txt  pyproject.toml  pytest.ini  quick_test_installation.py  requirements.txt  setup.py  test_ask_technical_support.py  test_installation_cost.py  test_installation_cost_chat.py  test_modular_products.py  test_phone_matching.py
development/: 2_conditional_node.py  3_mcp_node.py  3_mcp_server.py  environment.py  llm_if_node.py  random.py  simple.py  simple_2.py  simple_llm.py
development/langgraph/: branching.ipynb  email_agent.ipynb  hana_lite_flow.ipynb  orin_crm.db  state_checkpoints.db  use_the_graph_api.ipynb  use_the_graph_api.py
development/native/: simple.py  simple_2.py
development/tests/: test_ecommerce_products.py
docs/: CUSTOMER_ID_FIX.md  CUSTOMER_ID_FIXES_SUMMARY.md  CUSTOMER_ID_SECURITY_AUDIT.md  DASHBOARD_API.md  DATABASE_CONNECTION_FIX.md  DATABASE_RETRY.md  FRONTEND_ADMIN_API.md  FRONTEND_CHAT_HISTORY_API.md  GEMINI3_THOUGHT_SIGNATURE_FIX.md  GEMINI4X_MARKDOWN_CODE_BLOCK_FIX.md  GEMINI_COMPATIBILITY_FIX.md  GEMINI_COMPREHENSIVE_FIX_SUMMARY.md  GEMINI_SYSTEMMESSAGE_FIX.md  GEMINI_TOOL_CALLING_FIX.md  HANA_AGENT_ARCHITECTURE.md  INFINITE_LOOP_FIXES.md  LANGCHAIN_GOOGLE_GENAI_4X_RESPONSE_FIX.md  LANGCHAIN_GOOGLE_GENAI_UPGRADE.md  LLM_PROVIDER_SETUP.md  ORCHESTRATOR_INSTRUCTION_ARCHITECTURE.md  RESET_CHAT_FEATURE.md
migrations/: env.py
migrations/versions/: 01499ee036ee_initial_migration.py  0bd89c249479_increase_vehicle_type_column_length.py  20260315_add_deleted_at_to_customers.py  20260316_add_prompts_table.py  20260317_add_content_type_to_chat_sessions.py  20260319_add_chat_logs_table.py  20260409_add_user_id_to_customers.py  96819c061ec1_add_new_fields_to_products_table.py
src/orin_ai_crm/core/: openai.py
src/orin_ai_crm/core/agents/: __init__.py  config.py
src/orin_ai_crm/core/agents/custom/: hana_agent.py
src/orin_ai_crm/core/agents/custom/hana_agent/: __init__.py  agent_graph.py  custom_agent.py  default_products.py  (+2 more)
src/orin_ai_crm/core/agents/nodes/: __init__.py  conditional.py  ecommerce_nodes.py  hana_nodes.py  intent_classification.py  intent_classification_nodes.py  orin_landing_quality_check_nodes.py  product_form_nodes.py  profiling_nodes.py  quality_check_nodes.py  sales_nodes.py
src/orin_ai_crm/core/agents/tools/: __init__.py  agent_tools.py  api_tools.py  customer_agent_tools.py  customer_tools.py  db_tools.py  llm.py  meeting_agent_tools.py  meeting_tools.py  product_agent_tools.py  product_tools.py  profiling_agent_tools.py  prompt_tools.py  support_agent_tools.py  vps_tools.py
src/orin_ai_crm/core/agents/utils/: tool_call_tracker.py
src/orin_ai_crm/core/alpha_flow/: __init__.py  utils.py
src/orin_ai_crm/core/models/: __init__.py  database.py  llm_node.py  logic_node.py  schemas.py  states.py  types.py
src/orin_ai_crm/core/models/legacy/: logic_node.py
src/orin_ai_crm/core/utils/: __init__.py  db_retry.py  phone_utils.py
src/orin_ai_crm/server/: main.py
src/orin_ai_crm/server/config/: settings.py
src/orin_ai_crm/server/dependencies/: lifespan.py
src/orin_ai_crm/server/legacy/: main_backup.py  main_ic.py
src/orin_ai_crm/server/routes/: admin.py  chat.py  dashboard.py  freshchat.py  health.py  orin_landing.py  test_chat.py
src/orin_ai_crm/server/schemas/: __init__.py  admin.py  chat.py  dashboard.py  freshchat.py
src/orin_ai_crm/server/security/: auth.py  webhook.py
src/orin_ai_crm/server/services/: chat_processor.py  freshchat_api.py  message_batcher.py  orin_landing_processor.py
templates/orin_landing/: chat.html  login.html  setup.html
templates/test/: chat.html  login.html  setup.html
tests/: conftest.py  test_filter_image_urls.py  test_final_message_filter.py  test_fuzzy_match_takeover_detection.py  test_human_takeover_message.py  test_human_takeover_reset.py  test_intent_classification.py  test_interactive_profiling.py  test_interactive_profiling_e2e.py  test_live_agent_takeover_detection.py  test_send_form_vps_user.py  test_two_follow_ups.py  test_vps_user_details.py  test_vps_user_integration.py
tests/core/: test_alpha_flow.py  test_openai.py
tests/core/agents/: test_context_awareness.py  test_custom_agent.py  test_custom_agent_integration.py  test_custom_agent_tool_filtering.py  test_full_graph.py  test_json_extraction.py  test_llm_provider_switching.py  test_no_duplication.py  test_nodes.py  test_orchestrator_context.py  test_orchestrator_decision_validator.py  test_tool_calls_filtering.py
tests/core/models/: test_init.py  test_llm_node.py  test_logic_node.py  test_states.py  test_types.py
(+16 files in other folders)
