[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orin-ai-crm"
version = "0.1.0"
description = "Orin AI CRM System"
authors = ["Jemmy Febryan <danieljemmyfebryan@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Web Framework
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
starlette = "^0.50.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
python-multipart = "^0.0.22"

# AI/ML
openai = "^2.14.0"
langchain = "^1.2.0"
langchain-openai = "^1.1.6"
langgraph = "^1.0.5"
langgraph-checkpoint-sqlite = "^3.0.1"
langchain-mcp-adapters = "^0.2.1"

# Database
sqlalchemy = "^2.0.46"
aiomysql = "^0.3.2"
alembic = "^1.18.4"
pymysql = "^1.1.2"

# Data Processing
pandas = "^2.3.3"
numpy = "^2.4.0"

# Async
anyio = "^4.12.0"
httpx = "^0.28.1"
httpcore = "^1.0.9"
h11 = "^0.16.0"

# Utilities
tqdm = "^4.67.1"
click = "^8.3.1"
pytz = "^2025.2"
python-dateutil = "^2.9.0"

# Jupyter
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
cryptography = "^46.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
flake8 = "^7.3.0"
coverage = "^7.13.0"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers --cov=src --cov-report=term-missing"
